--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <input
     id="psno"
-    placeholder="e.g. 20358487"
+    placeholder="e.g. 1234"
     style="padding:10px; width:220px"
   />
   <br><br>
