--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@ function drawChit() {
   })
   .then(res => res.text())
   .then(result => {
-    if (result === "INVALID_PS") {
-      alert("❌ Invalid PS Number");
-    } else if (result === "PS_ALREADY_USED") {
+     if (result === "PS_ALREADY_USED") {
       alert("⚠️ PS Number already used");
     } else if (result === "NO_NAMES_LEFT") {
       alert("🎄 All names have been assigned");
